updated homepage, fixed css, updated scrapbook

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -58,7 +58,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/music">music</a>
 			<a href="/vgs">video games</a>
 			<a href="/tv">tv <img src="/!g/pix/updated1.gif" alt="updated"></a>
-			<a href="/reading">books <img src="/!g/pix/updated1.gif" alt="updated"></a>
+			<a href="/reading">reading <img src="/!g/pix/updated1.gif" alt="updated"></a>
 
 			<h3 class="misc"> misc</h3>
 			<a href="/projects">projects</a>
@@ -121,7 +121,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h2>currently...</h2>
 			<p><span class="hl">playing:</span> <a href="/vgs/games/kirby-planet-robobot/index.html">kirby planet robobot</a>, <a href="/vgs/games/fallout-new-vegas/index.html">fallout new vegas</a>, the style savvy 3DS games</p>
 			<p><span class="hl">reading:</span> <i>puella magi madoka magica: wraith arc</i></p>
-			<p><span class="hl">watching:</span> beastars (final season)</p>
+			<p><span class="hl">watching:</span> twin peaks: the return, beastars (final season)</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> enjoying my free time til classes start.</p>
 			<p class="date">last updated on 08.jan.25</p>
@@ -129,7 +129,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="piclog" class="box">
 			<h2>piclog</h2>
-			<a href="https://piclog.blue/profile.php?id=51" title="my piclog profile!" target="_blank"><img src="https://piclog.blue/latest.php?id=51" width="90%"></a>
+			<a href="https://piclog.blue/profile.php?id=51" title="my piclog profile!" target="_blank"><img src="https://piclog.blue/latest.php?id=51" width="90%" alt="piclog widget"></a>
 		</div>
 
 		<div id="outro" class="box">
@@ -139,8 +139,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 			<p>want to link back to me? here are some of my buttons! i would prefer if you didn't <a href="https://awesomelytechie.com/dont-hotlink/" target="_blank">hotlink</a> please! save to your own server.</p>
 			<center>
-				<img src="!g/web/doqmeat.png" alt="button">
-				<img src="!g/web/doqmeat-2.png" alt="button 2">
+				<img src="!g/web/doqmeat.png" alt="doqmeat button">
+				<img src="!g/web/doqmeat-2.png" alt="doqmeat button 2">
 			</center>
 			<p>if you want to explore more personal sites beyond doqmeat.com, check out my <a href="/sites">button
 					wall</a> with tons of buttons from my neighbors and just overall sites that i enjoy visiting.</p>
@@ -326,13 +326,13 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><a href="/notebook/links/credit.html#home">credit</a> for materials used / homepage running on v4</p>
 			<p>coded with love by <b>des</b> / on the web since <b>11.apr.23</b> / hosted on <a href="https://neocities.org" target="_blank">neocities</a> / <a title="email me!" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a></p>
 			<a title="link to rosemary's free palestine page full of great resources on how to know and help the people of palestine" href="https://hillhouse.neocities.org/journal/notes/palestine" target="_blank"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
-			<img src="/collection/internet-graphics/!g/best%20viewed.jpg">
-			<img src="/collection/internet-graphics/!g/nop.gif">
-			<img src="/collection/internet-graphics/!g/dontfeedai.gif">
-			<img src="/collection/internet-graphics/!g/antinft.png">
-			<a href="https://yesterweb.org/no-to-web3/" style="background: transparent"><img src="/collection/internet-graphics/!g/yesterweb-saynotoweb3.gif"></a>
-			<a href="http://validator.w3.org/feed/check.cgi?url=https%3A//doqmeat.com/rss.xml" target="_blank"><img src="/notebook/tutorials/rss/valid.png" alt="[Valid RSS]" title="Validate my RSS feed"></a>
-			<a href="https://ko-fi.com/doqmeat" target="_blank"><img src="!f/v4/icy/ko-fi.png" alt="ko-fi button"></a>
+			<img src="/collection/internet-graphics/!g/best%20viewed.jpg" alt="best viewed 1920 x 1080 resolution">
+			<img src="/collection/internet-graphics/!g/nop.gif" alt="no nazi, no fascism, no racism">
+			<img src="/collection/internet-graphics/!g/dontfeedai.gif" alt="don't feed the AI!">
+			<img src="/collection/internet-graphics/!g/antinft.png" alt="this is an anti-NFT site">
+			<a href="https://yesterweb.org/no-to-web3/" style="background: transparent"><img src="/collection/internet-graphics/!g/yesterweb-saynotoweb3.gif" alt="keep the web free, say no to web3"></a>
+			<a href="http://validator.w3.org/feed/check.cgi?url=https%3A//doqmeat.com/rss.xml" target="_blank"><img src="/notebook/tutorials/rss/valid.png" alt="valid rss" title="Validate my RSS feed"></a>
+			<a href="https://ko-fi.com/doqmeat" target="_blank"><img src="!f/v4/icy/ko-fi.png" alt="support meko-fi button"></a>
 		</footer>
 		<!--		wrapper end div-->
 	</div>
