--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -158,6 +158,7 @@
 			<div class="wrapper-in">
 				<marquee direction="left" scrollamount="9" behavior="alternate" onmouseover="this.stop();" onmouseout="this.start();">
 					<img src="/collection/cats/!g/grindneverstarts.jpg">
+					<img src="!g/me-irl/canweget.png" alt="can we get ben & jerry's?">
 					<img src="!g/me-irl/cat-bbq.jpg" alt="cats having a nice bbq">
 					<img src="!g/me-irl/birthday-seal.jpg">
 					<img src="!g/me-irl/epic-vamp.jpg">
@@ -287,6 +288,7 @@
 		<div class="header"><img src="!g/folder.png" class="folder"> toybox<img onclick="closeBox('toys')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
+				<a href="https://miserabledolly.neocities.org" target="_blank"><img src="!g/adopted/nukacola-miserabledolly.gif" alt="nukacola bottlecap"></a>
 				<img title="idk where this one is from but if anyone knows, let me know!" src="/!g/deco/gemini.gif">
 				<a href="https://mooncandy.toys/" target="_blank"><img src="!g/adopted/sticky.png"></a>
 				<a href="https://spiders.neocities.org"><img src="!g/adopted/galaxycat.png"></a>
