--- a/doqmeat/collection/cats/index.html
+++ b/doqmeat/collection/cats/index.html
@@ -60,6 +60,7 @@
 
 		<!--column 2-->
 		<div class="column">
+			<img src="!g/canucrackmyback.jpg" alt="can u crack my back">
 			<img src="!g/jolly-cat.gif" alt="jolly cat">
 			<img src="!g/violence.jpg" alt="violent kitties">
 			<img src="!g/smile.jpg" alt="soft smile cat">
