--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -49,6 +49,10 @@
 			</section>
 			<!-- 2025 section -->
 			<section id="y2025">
+				<!-- logs under here!!! -->
+				<article>
+					<p><b>16.jan.25 - 4pm</b> i would love to get into those hobonichi planners but like.... will it be any different from my normal ass planner... no... do i still want one... yes... <img src="/!g/pix/cat.gif" alt=""></p>
+				</article>
 				<article><b>06.jan.25 - 3pm</b> might do another rework of my homepage + the music index too. for my homepage, it feels a bit cluttered tbh and there's just some sections that i don't really use or are a bit unnecesary. i would also like to decorate it a bit more. we will see.</article>
 			</section>
 			<section id="y2024">
