--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -119,12 +119,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/games/kirby-planet-robobot/index.html">kirby planet robobot</a>, <a href="/vgs/games/fallout-new-vegas/index.html">fallout new vegas</a>, the style savvy 3DS games</p>
+			<p><span class="hl">playing:</span> <a href="/vgs/games/fallout-new-vegas/index.html">fallout new vegas</a>, balatro</p>
 			<p><span class="hl">reading:</span> <i>puella magi madoka magica: wraith arc</i></p>
-			<p><span class="hl">watching:</span> twin peaks: the return, beastars (final season)</p>
+			<p><span class="hl">watching:</span> twin peaks: the return</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> enjoying my free time til classes start.</p>
-			<p class="date">last updated on 08.jan.25</p>
+			<p class="date">last updated on 17.jan.25</p>
 		</div>
 
 		<div id="piclog" class="box">
