rss and new vegas

--- a/doqmeat/vgs/games/fallout-new-vegas/index.html
+++ b/doqmeat/vgs/games/fallout-new-vegas/index.html
@@ -40,8 +40,17 @@
 		<div class="info"><b>developer: </b> obsidian entertainment</div>
 		<div class="info"><b>genre/type: </b> shooter, rpg, action </div>
 		<div class="info"><b>status:</b> not finished</div>
-		<div class="info"><b>crash / glitch count:</b> 23</div>
+		<div class="info"><b>crash / glitch count:</b> 24</div>
+		<div class="info"><b>links:</b> <a title="not official but im linking it here so i can stop looking at fandom.com in the google search" href="https://fallout.wiki/" target="_blank">fallout wiki</a></div>
 		<h3>logs</h3>
+		<p>
+			<center><small>spoilers for dead money below!</small></center>
+		</p>
+		<p><span class="date">17.jan.25</span> i finished the <i>dead money</i> dlc recently. 1 out of 4 dlcs done! the gameplay was def something let me tell you that! thought at the end of the day i can't really complain a lot because it's really easy to cheese your way through. i really liked the story though. and same for the companions you meet along the way. my favorite is christine of course.... she had a scene where she asks to hold your hand and with the lesbian perk you can promise her that you will come back for her and that honestly left me GAGGED at the other end of the screen like.... okay i will now devote my life to you. i wish i could talk to veronica about christine post dlc.... sigh. my doomed yuri. dean and dog/god were also super interesting but that's all i gotta say about them.</p>
+		<p>retaking the topic about the gameplay: the 1st half of the dlc was not that bad at all. lots of traps. A LOT. of traps. i found the enemies a bit annoying because you had to blow their heads in order to really kill them but i eventually got the hang of it. they are also a bit scary. the 2nd half of the dlc that takes place inside the casino though... OH BOY!</p>
+		<p>the quests inside the casino were VERY challenging which is honestly welcome and all of that. but the alarms that made your head explode unless you reach a safe spot or disable them were INSANE considering the fact you also had hologram guards shooting lasers at you!!!! you have no idea how much i died during these sequences. jesus. anyways.elijah is such a fucking dickhead... he's probably homophobic too.</p>
+		<p>i lowkey let go. because i was only able to carry out 2 gold bars.</p>
+		<hr>
 		<p><span class="date">20.dec.24</span> I AM BACK I AM SO BACK! i mostly didn't touch this game at alllll the past few months because i wanted to get the DLCs through a steam sale before finishing the main story. im gonna do them all by release order. so yeah, i've been having a bit of fun with the ghosts and all of that in sierra madre. would love to know why i'm being attacked by ghosts.</p>
 		<hr>
 		<p><span class="date">04.aug.24</span> very close to the ending of the main quest (i think!) but i still have a few quests i wanna do... + i wanna explore as much as i can :3 i also would like to get the DLCs before finishing the main storyline but i wanna get em on sale... we'll see about that later on. here are some screenshots:</p>
