featured song n album

--- a/doqmeat/music/featured.html
+++ b/doqmeat/music/featured.html
@@ -62,9 +62,26 @@ iframe2
 </td></table>
 </details>
 -->
+		<details open>
+			<summary>
+				<span class="date">17.jan.25 - ? : lemon melon cookie / 11100011</span>
+			</summary>
+			<table>
+				<td class="t-left">
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5l8VZEyNRH8?si=OQj0n-oilZpQZUyb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>TAK is one of my favorite k-pop producers and a name that i always look forward to when i see him in the song credits. so when i saw that he left the production team NEWTYPE and just started doing his own thing INCLUDING making vocaloid songs i was like WOAH??? i kinda jumped a bit. idk if he will still produce songs for k-pop idols / groups again but either way i kinda won here. TAK's electronic style with those sick and catchy synths is a sound that i just never get tired of. anyway, this song is so much fun!</p>
+				</td>
+				<td class="t-right">
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wKETg-efIPE?si=3I4CGNRsTe27pYFI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>my first ever asian glow full album listen i think.... and man did i love this so very much! i feel like theres lots of textures in here and i love the mix of shoegaze with electronic elements. a nice and sweet listen despite all the noise. might become one of my fav releases of 2025 already idgaf.</p>
+					<p><b>highlights:</b> Jitnunkebi (Winter's Song), The Worst Way to Start an End, Dorothee Thines</p>
+				</td>
+			</table>
+		</details>
+
 		<details>
 			<summary>
-				<span class="date">01.jan.25 - ? : worm in the apple / angel interview</span>
+				<span class="date">01.jan.25 - 17.jan.25 : worm in the apple / angel interview</span>
 			</summary>
 			<p>i don't feel like doing a 2024 music recap (<small>or at least not in the way that i've always done them</small>) so i figured i should share my most liked song n album of that year!</p>
 			<table>
