--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -68,6 +68,7 @@
 
   <div id="updates" class="box">
    <h3>updates</h3>
+   <p><b>17.jan.25</b> - new featured releases!</p>
    <p><b>02.jan.25</b> - don't feel like doing a recap for last year (i didn't listen to much tbh!) so here's my <a href="https://rateyourmusic.com/list/doqmeat/2024-highlights/" target="_blank" class="outlink">2024 highlights</a> list on RYM</p>
    <p><b>25.nov.24</b> - logged <a href="concerts/index.html" target="mainframe">billlie</a>'s concert</p>
    <p><b>01.nov.24</b> - revived my <a href="playlists.html" target="mainframe">playlists</a> mini page</p>
@@ -88,14 +89,15 @@
   <div id="featured" class="box">
    <h3>featured song &amp; album</h3>
    <div class="song">
-    <h4><b>worm in the apple</b> - youra</h4>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/rUX9BTtdHdY?si=PJGRWfww9__OJHL9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <p>my song of the year, it is so catchy. it really kinda does make me feel like a worm.</p>
+    <h4><b>lemon melon cookie</b> - TAK</h4>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5l8VZEyNRH8?si=OQj0n-oilZpQZUyb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>TAK is one of my favorite k-pop producers and a name that i always look forward to when i see him in the song credits. so when i saw that he left the production team NEWTYPE and just started doing his own thing INCLUDING making vocaloid songs i was like WOAH??? i kinda jumped a bit. idk if he will still produce songs for k-pop idols / groups again but either way i kinda won here. TAK's electronic style with those sick and catchy synths is a sound that i just never get tired of. anyway, this song is so much fun!</p>
    </div>
    <div class="lp">
-    <h4><b>angel interview</b> - meaningful stone</h4>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=EBOnD5gvk1HXdpGA&amp;list=OLAK5uy_kSq0v4ExLeSLovLfNeliif-ERxpPLKyVo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <p>and my album of the year. a very splendid listening experience with a little surprise at the end.</p>
+    <h4><b>11100011</b> - asian glow</h4>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wKETg-efIPE?si=3I4CGNRsTe27pYFI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>my first ever asian glow full album listen i think.... and man did i love this so very much! i feel like theres lots of textures in here and i love the mix of shoegaze with electronic elements. a nice and sweet listen despite all the noise. might become one of my fav releases of 2025 already idgaf.</p>
+    <p><b>highlights:</b> Jitnunkebi (Winter's Song), The Worst Way to Start an End, Dorothee Thines</p>
    </div>
    <hr>
 
