--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -121,7 +121,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h2>currently...</h2>
 			<p><span class="hl">playing:</span> <a href="/vgs/games/fallout-new-vegas/index.html">fallout new vegas</a>, balatro</p>
 			<p><span class="hl">reading:</span> <i>puella magi madoka magica: wraith arc</i></p>
-			<p><span class="hl">watching:</span> twin peaks: the return</p>
+			<p><span class="hl">watching:</span> severance, twin peaks: the return</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> enjoying my free time til classes start.</p>
 			<p class="date">last updated on 17.jan.25</p>
