--- a/doqmeat/music/kpop-producers.html
+++ b/doqmeat/music/kpop-producers.html
@@ -49,13 +49,14 @@
 
 		<!--  <p class="key">key: artist, <a class="song" href="/">song</a>, <b>highlighted producers</b></p>-->
 
-		<h2>production teams</h2>
+		<h2 id="teams">production teams</h2>
 		<p class="key">producers who have also worked on a song but aren't part of said production teams will be mentioned but not <b>bolded</b></p>
 
-		<h3>NEWTYPE</h3>
+		<h3 id="newtype">NEWTYPE</h3>
 		<p>my favorite production team! i can always trust them for a great electronic song. as far as i known they tend to compose songs that leans into heavy and layered electronic songs and in my opinion they are the best ones at delivering these types of songs!</p>
 		<p>their work as producers is mostly seen in the discographies of <a href="https://en.wikipedia.org/wiki/Woollim_Entertainment" target="_blank">woollim entertainment</a> artists. website: <a href="https://newtypeent.com/">newtypeent.com</a></p>
 		<p><mark>highlighted producers: <b>TAK, 1Take, Corbin, Beatie</b></mark></p>
+		<p><u>jan 2025 edit:</u> <b>TAK</b> is no longer part of NEWTYPE<a title="my reaction to this information since TAK is my fav producer from NEWTYPE. though he is still making music so thank gof for that." href="/collection/cats/!g/gasp.jpg" target="_blank">*</a>, his solo stuff has been moved to <a href="#solo">individual producers</a> section.</p>
 		<ul>
 			<li>DRIPPIN's <a class="song" href="https://www.youtube.com/watch?v=Ifnamqk45Yo" target="_blank">switch</a> / <a class="song" href="https://youtu.be/XjkTVx9V5dE?si=2UhhuqipMlwgz24j" target="_blank">the one</a> / <a class="song" href="https://youtu.be/qyUt4Yk4E04">seven sins</a> - <b>TAK, CORBIN</b></li>
 			<li>DRIPPIN's <a class="song" href="https://www.youtube.com/watch?v=wqeafrCOoxA" target="_blank">7villaz</a> - <b>TAK</b></li>
@@ -65,7 +66,6 @@
 			<li>Rocket Punch's <a class="song" href="https://youtu.be/oAbhfMWvcZs" target="_blank">flash</a> - <b>TAK</b>, <b>Corbin</b>, <b>Beatie</b></li>
 			<li>Kwon Eunbi's <a class="song" href="https://youtu.be/enSvdtEutuw" target="_blank">glitch</a>, <a class="song" href="https://youtu.be/1wPz1XSvgPo" target="_blank">croquis</a> - <b>TAK</b>, <b>Corbin</b></li>
 			<li><b>TAK</b> x <b>Corbin</b>'s <a class="song" href="https://youtu.be/8vX66g94PSU" target="_blank">tic! tac! toe!</a></li>
-			<li><b>TAK</b>'s remix of qwer's <a class="song" href="https://youtu.be/MZ5lkYhm6xQ?si=O3uI82FDeYDMxPi-" target="_blank">discord</a></li>
 		</ul>
 
 		<h3>full8loom</h3>
@@ -97,8 +97,17 @@
 			<li>DRIPPIN's <i>young blood</i> prod. by <b>inner child, pdly, 김해론</b></li>
 		</ul>
 
-		<h2>individual producers</h2>
+		<h2 id="solo">individual producers</h2>
+
+		<h3>TAK</h3>
+		<ul>
+			<li>qwer's <a class="song" href="https://youtu.be/MZ5lkYhm6xQ?si=O3uI82FDeYDMxPi-" target="_blank">discord remix</a></li>
+			<li><a href="https://youtu.be/5l8VZEyNRH8?si=ALws2w_fV7tVqVw2" target="_blank">lemon melon cookie</a></li>
+		</ul>
+
+		<hr>
 		<p>not sure if these are teams or individuals tbh. i don't have a lot of info about them!</p>
+
 		<h3>BADD</h3>
 		<ul>
 			<li>loona - colors</li>
@@ -117,7 +126,7 @@
 		</ul>
 	</main>
 	<footer>
-		<b>last updated on 03.sep.24</b>
+		<b>last updated on 20.jan.25</b>
 		<br>
 		<a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a>
 	</footer>
