fixed link in rss

--- a/doqmeat/music/kpop-producers.html
+++ b/doqmeat/music/kpop-producers.html
@@ -56,7 +56,7 @@
 		<p>my favorite production team! i can always trust them for a great electronic song. as far as i known they tend to compose songs that leans into heavy and layered electronic songs and in my opinion they are the best ones at delivering these types of songs!</p>
 		<p>their work as producers is mostly seen in the discographies of <a href="https://en.wikipedia.org/wiki/Woollim_Entertainment" target="_blank">woollim entertainment</a> artists. website: <a href="https://newtypeent.com/">newtypeent.com</a></p>
 		<p><mark>highlighted producers: <b>TAK, 1Take, Corbin, Beatie</b></mark></p>
-		<p><u>jan 2025 edit:</u> <b>TAK</b> is no longer part of NEWTYPE<a title="my reaction to this information since TAK is my fav producer from NEWTYPE. though he is still making music so thank gof for that." href="/collection/cats/!g/gasp.jpg" target="_blank">*</a>, his solo stuff has been moved to <a href="#solo">individual producers</a> section.</p>
+		<p><u>jan 2025 edit:</u> <b>TAK</b> is no longer part of NEWTYPE<a title="my reaction to this information since TAK is my fav producer from NEWTYPE. though he is still making music so thank god for that." href="/collection/cats/!g/gasp.jpg" target="_blank">*</a>, his solo stuff has been moved to <a href="#solo">individual producers</a> section.</p>
 		<ul>
 			<li>DRIPPIN's <a class="song" href="https://www.youtube.com/watch?v=Ifnamqk45Yo" target="_blank">switch</a> / <a class="song" href="https://youtu.be/XjkTVx9V5dE?si=2UhhuqipMlwgz24j" target="_blank">the one</a> / <a class="song" href="https://youtu.be/qyUt4Yk4E04">seven sins</a> - <b>TAK, CORBIN</b></li>
 			<li>DRIPPIN's <a class="song" href="https://www.youtube.com/watch?v=wqeafrCOoxA" target="_blank">7villaz</a> - <b>TAK</b></li>
