added a new outfit

--- a/doqmeat/fashion/index.html
+++ b/doqmeat/fashion/index.html
@@ -29,6 +29,7 @@
   </div>
   <div class="gallery">
    <h2>outfits</h2>
+   <img src="!g/fits/250121.png" alt="white shirt with a silly cat and cream jeans" class="fit-pic caption-pic" title="love the shirt and the earrings a lot from this fit! i think they look so nice together" tabindex="0">
    <img class="fit-pic caption-pic" src="!g/fits/18.png" title="silly green fit" alt="overalls with a striped green and black shirt and a froggy hat" tabindex="0">
    <img class="fit-pic caption-pic" title="i love this skirt so much!" src="!g/fits/17.png" alt="black shirt, purple skirt" tabindex="0">
    <img class="fit-pic caption-pic" title="you will see this type of combo A LOT. i'd be nothing without my floral button up shirts." src="!g/fits/1.png" alt="floral button up, brown silk pants, black converse" tabindex="0">
@@ -92,7 +93,7 @@
  </main>
 
  <footer>
-  <p>last updated: <b>01.nov.24</b></p>
+  <p>last updated: <b>21.jan.25</b></p>
   <p><a href="/">go back home?</a> / <a href="/sitemap">sitemap</a></p>
   <p><b>credit:</b> insp by ollie's <a href="https://olliveen.neocities.org/fashion" target="_blank">fashion page</a></p>
  </footer>
