--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -51,6 +51,9 @@
 			<section id="y2025">
 				<!-- logs under here!!! -->
 				<article>
+					<p><b>21.jan.25 - 4pm</b> first day of 2nd year of uni was very nice despite the horrors. there's something about studying again that does make me want to work on my website more compared to when i was in winter break... it's probably just that i really wanted to play video games and chill during my break <img src="/!g/pix/emote1laugh.gif" alt=""></p>
+				</article>
+				<article>
 					<p><b>16.jan.25 - 4pm</b> i would love to get into those hobonichi planners but like.... will it be any different from my normal ass planner... no... do i still want one... yes... <img src="/!g/pix/cat.gif" alt=""></p>
 				</article>
 				<article><b>06.jan.25 - 3pm</b> might do another rework of my homepage + the music index too. for my homepage, it feels a bit cluttered tbh and there's just some sections that i don't really use or are a bit unnecesary. i would also like to decorate it a bit more. we will see.</article>
