atabook guestbook is now live! been having trouble with the current one

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -68,7 +68,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h3 class="site"> sitely</h3>
 			<a href="/sites">button wall</a>
 			<a title="contains links, resources, F2U stuff, archives, etc!" href="/notebook"> notebook</a>
-			<a href="/guestbook">guestbook</a>
+			<a href="https://doqmeat.atabook.org/" class="outlink">guestbook</a>
 			<a href="sitemap.html">sitemap</a>
 
 			<h3 class="offsite"> offsite</h3>
