--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -122,7 +122,7 @@
 				↳
 				<a href="/projects/python/index.html" target="_parent">learning python</a>
 			</ul>
-			<li><a href="/guestbook/index.html" target="_parent">guestbook</a></li>
+			<li><a href="https://doqmeat.atabook.org/" target="_blank" class="outlink">guestbook</a></li>
 			<ul>
 				<li><a href="/guestbook/archive.html">archived 123guestbook</a></li>
 			</ul>
