--- a/doqmeat/guestbook/archive.html
+++ b/doqmeat/guestbook/archive.html
@@ -283,7 +283,6 @@
 		.body {
 			padding: 10px;
 		}
-
 	</style>
 </head>
 
@@ -296,7 +295,7 @@
 		<dl class="nav-bar">
 			<dd>
 
-				&laquo; <a href="https://doqmeat.com/guestbook" target="_self" rel="noopener noreferrer nofollow">back to current guestbook</a>
+				&laquo; <a href="https://doqmeat.atabook.org/" target="_self" rel="noopener noreferrer nofollow">back to current guestbook</a>
 			</dd>
 		</dl>
 
@@ -307,7 +306,7 @@
 			</dt>
 
 			<dd class="msg">
-				since 123guestbook is closing, <a href="http://doqmeat.com/guestbook" target="_blank" rel="external nofollow">i made a guestbook page here!</a> in the future i'll archive all of these messages on my site <img src="/img/smile.gif" /> for now this guestbook will be in read only mode.
+				since 123guestbook is closing, <a href="https://doqmeat.atabook.org/" target="_blank" rel="external nofollow">i made a guestbook page here!</a> in the future i'll archive all of these messages on my site <img src="/img/smile.gif" /> for now this guestbook will be in read only mode.
 			</dd>
 
 
