--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -51,6 +51,9 @@
 			<section id="y2025">
 				<!-- logs under here!!! -->
 				<article>
+					<p><b>22.jan.25 - 5pm</b> when i mention the horrors i am talking about the political horrors happening in the US btw. which will inevitably affect PR. specially with our stupid ass governor.... wanting to make a statue of trump here... <img src="/!g/pix/catangry.gif"> i need a lot specific people to die so i can be at peace.</p>
+				</article>
+				<article>
 					<p><b>21.jan.25 - 4pm</b> first day of 2nd year of uni was very nice despite the horrors. there's something about studying again that does make me want to work on my website more compared to when i was in winter break... it's probably just that i really wanted to play video games and chill during my break <img src="/!g/pix/emote1laugh.gif" alt=""></p>
 				</article>
 				<article>
