fixed some sitemap links

--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -33,11 +33,11 @@
 		<li><a href="/" target="_parent">homepage</a></li>
 		<li><a href="rss.xml" target="_parent">RSS feed</a></li>
 		<ul>
-			<li><a href="/about.html" target="_parent">about</a></li>
-			<li><a href="/photobook" target="_parent">photobook</a></li>
-			<li><a href="/scrapbook" target="_parent">scrapbook</a></li>
-			<li><a href="/art" target="_parent">art</a></li>
-			<li><a href="/fashion" target="_parent">fashion</a></li>
+			<li><a href="/about/index.html" target="_parent">about</a></li>
+			<li><a href="/photobook/index.html" target="_parent">photobook</a></li>
+			<li><a href="/scrapbook/index.html" target="_parent">scrapbook</a></li>
+			<li><a href="/art/index.html" target="_parent">art</a></li>
+			<li><a href="/fashion/index.html" target="_parent">fashion</a></li>
 			<li><b>writings</b></li>
 			<ul>
 				↳
@@ -83,7 +83,7 @@
 			<li><a href="/collection" target="_parent">collections</a></li>
 			<ul>
 				↳
-				<a href="/collection/internet-stamps" target="_parent">internet graphics</a>
+				<a href="/collection/internet-graphics" target="_parent">internet graphics</a>
 				<br />
 				↳
 				<a href="/collection/mail-stamps" target="_parent">mail stamps</a>
