added a recc box to music homepage, minor changes to into page

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -68,6 +68,7 @@
 
   <div id="updates" class="box">
    <h3>updates</h3>
+   <p><b>22.jan.25</b> - added a message box where you can recommend me something and it will pop up to my e-mail!</p>
    <p><b>17.jan.25</b> - new featured releases!</p>
    <p><b>02.jan.25</b> - don't feel like doing a recap for last year (i didn't listen to much tbh!) so here's my <a href="https://rateyourmusic.com/list/doqmeat/2024-highlights/" target="_blank" class="outlink">2024 highlights</a> list on RYM</p>
    <p><b>25.nov.24</b> - logged <a href="concerts/index.html" target="mainframe">billlie</a>'s concert</p>
@@ -86,6 +87,15 @@
    <a title="click to open listening log and continue reading!" href="listening-log/2024/fall.html" target="_blank"></a>
   </div> -->
 
+  <div id="recc" class="box">
+   <h3>recommend me music!</h3>
+   <form action="https://formsubmit.co/doqmeat@gmail.com" method="POST" />
+   <textarea id="message" name="message" placeholder="write your message here! could be an album or songs." style="height:100px"></textarea>
+   <input id="submit" type="submit" value="Submit">
+   </form>
+   <small>click submit once please!</small>
+  </div>
+
   <div id="featured" class="box">
    <h3>featured song &amp; album</h3>
    <div class="song">
@@ -97,7 +107,7 @@
     <h4><b>11100011</b> - asian glow</h4>
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wKETg-efIPE?si=3I4CGNRsTe27pYFI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <p>my first ever asian glow full album listen i think.... and man did i love this so very much! i feel like theres lots of textures in here and i love the mix of shoegaze with electronic elements. a nice and sweet listen despite all the noise. might become one of my fav releases of 2025 already idgaf.</p>
-    <p><b>highlights:</b> Jitnunkebi (Winter's Song), The Worst Way to Start an End, Dorothee Thines</p>
+    <p><b>highlights:</b> camel8strike, Jitnunkebi (Winter's Song), The Worst Way to Start an End, Dorothee Thines</p>
    </div>
    <hr>
 
