--- a/doqmeat/music/info.html
+++ b/doqmeat/music/info.html
@@ -27,15 +27,19 @@
 
 		<p>one of my most precious memories is making lists of songs i wanted my dad to download on my mp3 player when i was little. throughout my entire life, i have always been accompanied by music, it is something deeply important to me! ♪(´▽｀)</p>
 
-		<p>i wanted to have a space where i can talk a little bit about the stuff i like to listen to while also showcasing it as well.</p>
+		<p>i wanted to have a space where i can talk a little bit about the stuff i like to listen to!</p>
 
-		<p>my desktop headphones are the infamous <i>razer kraken kitty headset</i> <small>they are the best sounding headphones i've ever had tbh</small>, when i'm on the go i use my <i>JBL tune 720bt</i> which are sooo nice to wear and they sound great too! and my music player of choice is <a href="https://getwacup.com/" target="_blank">WACUP</a>! <small><a title="img of music player" href="https://doqmeat.com/microblog/!g/240710-musicplayer.jpg" target="_blank">look how cute...</a></small></p>
-
-		<p>when it comes to <b>streaming</b> stuff, i use bandcamp or youtube preferably. if not, i use <a href="https://www.xmanagerapp.com/" target="_blank" class="outlink">this</a> on my phone :) if i enjoy an album or EP A LOT i'll try to get the <a title="my CD collection" href="cds.html" target="_blank">CD</a>. if not, i'll get it digitally.</p>
-
-		<p>feel free to send me a recommendation through <a title="&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">e-mail</a> or my <a href="https://rateyourmusic.com/recommend/?rece=doqmeat" target="_blank" class="outlink">rate your music</a> ! i will gladly listen to it whenever i have some time. i love discovering new music <img src="/!g/pix/catroll.gif"></p>
+		<p>feel free to send me a recommendation through <a title="&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">e-mail</a> or down below on my music page! i will gladly listen to it whenever i have some time. i love discovering new music <img src="/!g/pix/catroll.gif"></p>
 
 		<center><img src="/!g/deco/jermamusic.gif"></center>
+
+		<h3>stuff</h3>
+		<!-- make it so when i hover over the headphone names, a pic pops up -->
+		<p><b>headphones</b> i like using are the <i>razer kraken kitty headset</i> <small>they are the best sounding headphones i've ever had tbh</small>, and <i>JBL tune 720bt</i> for when i prefer using bluetooth.</p>
+		<p>itunes annoyed the fuck out of me one day so i switched to <a href="https://getwacup.com/" target="_blank">WACUP</a> for my <b>music player</b> and i've never looked back. look how cute...</p>
+		<center><img src="!g/index/wacup.jpg" alt="a screenshot of my wacup music player" width="90%"></center>
+
+		<p>when it comes to <b>streaming</b> stuff, i use bandcamp or youtube preferably. if not, i use <a href="https://www.xmanagerapp.com/" target="_blank" class="outlink">this</a> on my phone :) if i enjoy an album or EP A LOT i'll try to get the <a title="my CD collection" href="cds.html" target="_blank">CD</a> if my bank acc lets me. if not, i'll get it digitally.</p>
 
 		<h3>misc</h3>
 		<p>i run a <a title="currently a WIP!" href="https://siinamota.doqmeat.com/" target="_blank" class="outlink">siinamota fansite</a>, he is my favorite vocaloid producer and i highly recommend his stuff if you enjoy vocaloid. i also run the <a href="https://siinamota.doqmeat.com/bot" target="_blank" class="outlink">siinamota song bot</a> on twitter.</p>
