named archived guestbook

--- a/doqmeat/guestbook/index.html
+++ b/doqmeat/guestbook/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>guestbook</title>
+	<title>(ARCHIVED) guestbook</title>
 	<meta name="description" content="des' personal website">
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<!--	CSS -->
@@ -19,7 +19,10 @@
 <body>
 	<a id="home" title="go back to homepage" href="/">home</a>
 	<main>
-		<h1>doqmeat's guestbook</h1>
+		<h1>doqmeat's (archived) guestbook</h1>
+		<center>
+			<p>been having problems with spam + idk why it's not loading.... so i moved guestbook to <a href="https://doqmeat.atabook.org" target="_blank">atabook</a> !</p>
+		</center>
 		<center>
 			<div id="pop-up">
 				thank you for checking my site out! feel free to leave a message :3
