--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -119,12 +119,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/games/fallout-new-vegas/index.html">fallout new vegas</a>, balatro</p>
+			<p><span class="hl">playing:</span> style savvy games, balatro</p>
 			<p><span class="hl">reading:</span> <i>puella magi madoka magica: wraith arc</i></p>
 			<p><span class="hl">watching:</span> severance, twin peaks: the return</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> enjoying my free time til classes start.</p>
-			<p class="date">last updated on 17.jan.25</p>
+			<p><span class="hl">working on:</span> on the uni grind once again</p>
+			<p class="date">last updated on 23.jan.25</p>
 		</div>
 
 		<div id="piclog" class="box">
@@ -135,7 +135,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<div id="outro" class="box">
 			<h2>bye bye</h2>
 			<p>i hope you have fun browsing my website :3</p>
-			<p>you can leave a message about your visit on my <a href="/guestbook">guestbook</a>, the chatbox, or even send me an <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;">e-mail</a> if you'd like! go crazy. just be nice.</p>
+			<p>you can leave a message about your visit on my <a href="https://doqmeat.atabook.org">guestbook</a>, the chatbox, or even send me an <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;">e-mail</a> if you'd like! go crazy. just be nice.</p>
 
 			<p>want to link back to me? here are some of my buttons! i would prefer if you didn't <a href="https://awesomelytechie.com/dont-hotlink/" target="_blank">hotlink</a> please! save to your own server.</p>
 			<center>
