updated music index + minor changes to info page

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -68,17 +68,10 @@
 
   <div id="updates" class="box">
    <h3>updates</h3>
-   <p><b>22.jan.25</b> - added a message box where you can recommend me something and it will pop up to my e-mail!</p>
+   <p><b>23.jan.25</b> - added a message box where you can recommend me something and it will pop up to my e-mail!</p>
    <p><b>17.jan.25</b> - new featured releases!</p>
    <p><b>02.jan.25</b> - don't feel like doing a recap for last year (i didn't listen to much tbh!) so here's my <a href="https://rateyourmusic.com/list/doqmeat/2024-highlights/" target="_blank" class="outlink">2024 highlights</a> list on RYM</p>
    <p><b>25.nov.24</b> - logged <a href="concerts/index.html" target="mainframe">billlie</a>'s concert</p>
-   <p><b>01.nov.24</b> - revived my <a href="playlists.html" target="mainframe">playlists</a> mini page</p>
-   <p><b>22.oct.24</b> - listening log: <a href="listening-log/2024/fall.html#4">crystal castles</a> + <a href="listening-log/2024/fall.html#5">MG ultra</a></p>
-   <p><b>19.oct.24</b> - listening log: <a href="listening-log/2024/fall.html#3">imaginal disk</a> + new featured song and album</p>
-   <p><b>05.oct.24</b> - debuting fall's listening log with tripleS' <a href="listening-log/2024/fall.html#2">assemble24</a></p>
-   <p><b>21.sep.24</b> - music page revamp!</p>
-   <p><b>02.sep.24</b> - new listening log: <i>TTYL</i></p>
-   <p><b>01.sep.24</b> - updated featured song &amp; album</p>
   </div>
 
   <!-- <div id="log" class="box">
@@ -107,7 +100,7 @@
     <h4><b>11100011</b> - asian glow</h4>
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wKETg-efIPE?si=3I4CGNRsTe27pYFI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <p>my first ever asian glow full album listen i think.... and man did i love this so very much! i feel like theres lots of textures in here and i love the mix of shoegaze with electronic elements. a nice and sweet listen despite all the noise. might become one of my fav releases of 2025 already idgaf.</p>
-    <p><b>highlights:</b> camel8strike, Jitnunkebi (Winter's Song), The Worst Way to Start an End, Dorothee Thines</p>
+    <p><b>highlights:</b> camel8strike, jitnunkebi (winter's song), dorothee thines</p>
    </div>
    <hr>
 
