updated music homepage

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -18,7 +18,7 @@
  <!-- tooltip shit -->
  <script src="https://melonking.net/scripts/frame-link.js"></script>
  <script>
-  titlePrefix = "music - ";
+  titlePrefix = "music ♪ ";
  </script>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
  <script src="/!f/tooltip-jquary.js"></script>
@@ -68,7 +68,7 @@
 
   <div id="updates" class="box">
    <h3>updates</h3>
-   <p><b>23.jan.25</b> - added a message box where you can recommend me something and it will pop up to my e-mail!</p>
+   <p><b>23.jan.25</b> - updated <a href="kpop-producers.html" target="mainframe">fav kpop producers</a> + added a message box where you can recommend me something and it will pop up to my e-mail!</p>
    <p><b>17.jan.25</b> - new featured releases!</p>
    <p><b>02.jan.25</b> - don't feel like doing a recap for last year (i didn't listen to much tbh!) so here's my <a href="https://rateyourmusic.com/list/doqmeat/2024-highlights/" target="_blank" class="outlink">2024 highlights</a> list on RYM</p>
    <p><b>25.nov.24</b> - logged <a href="concerts/index.html" target="mainframe">billlie</a>'s concert</p>
