--- a/doqmeat/music/kpop-producers.html
+++ b/doqmeat/music/kpop-producers.html
@@ -45,7 +45,7 @@
 		<p><small>
 				<center>currently a work in progress!</center>
 			</small></p>
-		<p>i feel like these people often get overlooked by the kpop community a lot when they are the ones that bring kpop music to life. one day i was bored as hell and decided to compile a list of producers who's style i like and my favorite songs from them <img src="/!g/pix/cat-music.gif"></p>
+		<p>i feel like these people often get overlooked by the kpop community a lot when they are the ones that bring kpop music to life. one day i was bored as hell and decided to compile a list of producers whose style i like and my favorite songs from them <img src="/!g/pix/cat-music.gif"></p>
 
 		<!--  <p class="key">key: artist, <a class="song" href="/">song</a>, <b>highlighted producers</b></p>-->
 
@@ -56,7 +56,7 @@
 		<p>my favorite production team! i can always trust them for a great electronic song. as far as i known they tend to compose songs that leans into heavy and layered electronic songs and in my opinion they are the best ones at delivering these types of songs!</p>
 		<p>their work as producers is mostly seen in the discographies of <a href="https://en.wikipedia.org/wiki/Woollim_Entertainment" target="_blank">woollim entertainment</a> artists. website: <a href="https://newtypeent.com/">newtypeent.com</a></p>
 		<p><mark>highlighted producers: <b>TAK, 1Take, Corbin, Beatie</b></mark></p>
-		<p><u>jan 2025 edit:</u> <b>TAK</b> is no longer part of NEWTYPE<a title="my reaction to this information since TAK is my fav producer from NEWTYPE. though he is still making music so thank god for that." href="/collection/cats/!g/gasp.jpg" target="_blank">*</a>, his solo stuff has been moved to <a href="#solo">individual producers</a> section.</p>
+		<p><u>jan 2025 edit:</u> <b>TAK</b> is no longer part of NEWTYPE<a title="my reaction to this information since TAK is my fav producer from NEWTYPE. though he is still making music so thank god for that." href="/collection/cats/!g/gasp.jpg" target="_blank">*</a>, his name is now mentioned under collaborators on their website. his solo stuff has been moved to <a href="#solo">individual producers</a> section.</p>
 		<ul>
 			<li>DRIPPIN's <a class="song" href="https://www.youtube.com/watch?v=Ifnamqk45Yo" target="_blank">switch</a> / <a class="song" href="https://youtu.be/XjkTVx9V5dE?si=2UhhuqipMlwgz24j" target="_blank">the one</a> / <a class="song" href="https://youtu.be/qyUt4Yk4E04">seven sins</a> - <b>TAK, CORBIN</b></li>
 			<li>DRIPPIN's <a class="song" href="https://www.youtube.com/watch?v=wqeafrCOoxA" target="_blank">7villaz</a> - <b>TAK</b></li>
@@ -64,12 +64,12 @@
 			<li>Stray Kids' <a class="song" href="https://youtu.be/S38g0Hgrhu8" target="_blank">give me your TMI</a> / <a class="song" href="https://www.youtube.com/watch?v=5rPluw_-Eb4" target="_blank">side effects</a> - <b>TAK</b>, <b>1Take</b>, 창빈 (3RACHA), 한 (3RACHA)</li>
 			<li>Yukika's <a class="song" href="https://youtu.be/RIKTYUWQOcs" target="_blank">pit-a-pet</a> - <b>TAK</b>, seibin (ESTIMATE)</li>
 			<li>Rocket Punch's <a class="song" href="https://youtu.be/oAbhfMWvcZs" target="_blank">flash</a> - <b>TAK</b>, <b>Corbin</b>, <b>Beatie</b></li>
-			<li>Kwon Eunbi's <a class="song" href="https://youtu.be/enSvdtEutuw" target="_blank">glitch</a>, <a class="song" href="https://youtu.be/1wPz1XSvgPo" target="_blank">croquis</a> - <b>TAK</b>, <b>Corbin</b></li>
+			<li>Kwon Eunbi's <a class="song" href="https://youtu.be/enSvdtEutuw" target="_blank">glitch</a> / <a class="song" href="https://youtu.be/1wPz1XSvgPo" target="_blank">croquis</a> - <b>TAK</b>, <b>Corbin</b></li>
 			<li><b>TAK</b> x <b>Corbin</b>'s <a class="song" href="https://youtu.be/8vX66g94PSU" target="_blank">tic! tac! toe!</a></li>
 		</ul>
 
-		<h3>full8loom</h3>
-		<p>you know a song is gonna be good when it has that "AH AH!" (their producer tag!) in the intro / <a href="https://www.instagram.com/p/CSEY0kKF_cO/?hl=en">instagram</a></p>
+		<h3 id="f8">full8loom</h3>
+		<p>you know a song is gonna be good when it has that "AAAAH AH!" (their producer tag!) in the intro / <a href="https://www.instagram.com/p/CSEY0kKF_cO/?hl=en">instagram</a></p>
 		<p><mark>highlighted producers: <b>영광의 얼굴들 (glory face), 진리 (jinli), HARRY</b></mark></p>
 		<ul>
 			<li>DRIPPIN's <i>nostalgia</i></li>
@@ -78,14 +78,14 @@
 			<li>Golden Child's <i>spell</i> - <b>영광의 얼굴들</b>, <b>진리</b>, Jake K (ARTiffect)</li>
 		</ul>
 
-		<h3>MonoTree</h3>
+		<h3 id="monotree">MonoTree</h3>
 		<p>possibly one if the most well known producer teams in the kpop sphere! monotree's style is pretty diverse from producer to producer but the ones i've highlighted have worked on great dancepop and electropop tracks / website: <a href="https://www.monotreemusic.com">monotreemusic.com</a></p>
-		<p>highlighted producers: <b>G-High, Hyun Hwang, 김해론 (Heron Kim), INNER CHILD, pdly, onestar</b></p>
+		<p><mark>highlighted producers: <b>G-High, Hyun Hwang, 김해론 (Heron Kim), INNER CHILD, pdly, onestar</b></mark></p>
 		<ul>
 			<li><b>G-High</b>
 				<ul>
 					<li>moonbin and sanha's <i>bad idea</i></li>
-					<li>odd eye circle's <i>loonatic, my secret playlist, sweet crazy love</i></li>
+					<li>odd eye circle's <i>loonatic / my secret playlist / sweet crazy love</i></li>
 				</ul>
 			</li>
 			<li><b>Hyun Hwang (황현)</b>
@@ -97,12 +97,22 @@
 			<li>DRIPPIN's <i>young blood</i> prod. by <b>inner child, pdly, 김해론</b></li>
 		</ul>
 
+		<h3>stardust</h3>
+		<p><small>thank you to <a href="https://johndavid.neocities.org" target="_blank">JohnDavid</a> for the info of this team since for the longest time i thought it was just 1 person! i still sadly don't really have a way of knowing which individuals worked on each song but i will still list the members below.</small></p>
+		<p><mark>producers: 임유섭 (Im Yuseop), 이상훈 (Lee Sanghoon), 박용성 (Park Yongseong), Jenny Hong, 88kief, 심재환 (Shim Jaehwan)</mark></p>
+		<ul>
+			<li>drippin's <i>utopia</i></li>
+			<li>lovelyz's <i>obliviate</i></li>
+		</ul>
+
 		<h2 id="solo">individual producers</h2>
 
 		<h3>TAK</h3>
+		<p>former member of <b>NEWTYPE</b>, he is currently listed as a collaborator on their website.</p>
+		<p>i have the knowledge that he started music production with rhythm games but i don't remember the source of this so take this a grain of salt. will put a link here once i find it.</p>
 		<ul>
 			<li>qwer's <a class="song" href="https://youtu.be/MZ5lkYhm6xQ?si=O3uI82FDeYDMxPi-" target="_blank">discord remix</a></li>
-			<li><a href="https://youtu.be/5l8VZEyNRH8?si=ALws2w_fV7tVqVw2" target="_blank">lemon melon cookie</a></li>
+			<li><a class="song" href="https://youtu.be/5l8VZEyNRH8?si=ALws2w_fV7tVqVw2" target="_blank">lemon melon cookie</a></li>
 		</ul>
 
 		<hr>
@@ -118,15 +128,9 @@
 			<li>weki meki - metronome</li>
 		</ul>
 
-		<h3>stardust</h3>
-
-		<ul>
-			<li>drippin - utopia</li>
-			<li>lovelyz - obliviate</li>
-		</ul>
 	</main>
 	<footer>
-		<b>last updated on 20.jan.25</b>
+		<b>last updated on 23.jan.25</b>
 		<br>
 		<a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a>
 	</footer>
