minor updates to some pages

--- a/doqmeat/music/concerts/index.html
+++ b/doqmeat/music/concerts/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
- <div id="frame">
+ <main id="frame">
   <h2>concerts</h2>
   <p>here's ones that i've been to!</p>
   <h3 id="billlie-1">24.nov.24 - billlie</h3>
@@ -64,7 +64,7 @@
    <li>beach house</li>
    <li>to see any of my loona girlies</li>
   </ul>
- </div>
+ </main>
  <footer>
   <b>last updated on: 27.nov.24</b>
   <br>
