--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -28,16 +28,19 @@
 <body>
 	<div id="frame">
 		<h2>listening logs</h2>
-		<p>ramblings about things that i listen to. these are a bit rarer nowaways so feel free to check out my <a href="https://rateyourmusic.com/list/doqmeat/" target="_blank" class="outlink">RYM page</a> where i make yearly lists of everything i listen to + highlights. very lowkey though compared to this listening log.</p>
+		<p>ramblings about things that i listen to. entries nowadays are very rare though i still want to make a space for these.</p>
+		<p>full listening logs are available on <a href="https://rateyourmusic.com/~doqmeat" target="_blank" class="outlink">RYM</a> where i make yearly lists of everything i listen to, my initial thoughts, and my fav songs. it's similar to these logs but with less brain power.</p>
 		<h3>pages</h3>
 		<h4>2025</h4>
-		<a href="2025/index.html">soon!</a>
+		<p>RYM <a href="https://rateyourmusic.com/list/doqmeat/2025-log" target="_blank" class="outlink">log</a> / <a href="https://rateyourmusic.com/list/doqmeat/2025-highlights" target="_blank" class="outlink">highlights</a></p>
 		<h4>2024</h4>
+		<p>RYM <a href="https://rateyourmusic.com/list/doqmeat/2024-log" target="_blank" class="outlink">log</a> / <a href="https://rateyourmusic.com/list/doqmeat/2024-highlights" target="_blank" class="outlink">highlights</a></p>
 		<a href="2024/fall.html">fall</a>
 		<a href="2024/summer.html">summer</a>
 		<a href="2024/spring.html">spring</a>
 		<a href="2024/winter.html">winter</a>
 		<h4>2023</h4>
+		<p>RYM <a href="https://rateyourmusic.com/list/doqmeat/2023-log" target="_blank" class="outlink">log</a></p>
 		<a href="2023/12.html">december</a>
 		<a href="2023/11.html">november</a>
 		<a href="2023/10.html">october</a>
@@ -47,7 +50,8 @@
 		<a href="2023/06.html">june</a>
 		<a href="2023/05.html">may</a>
 		<a href="2023/04.html">april</a>
-
+		<h4>2022</h4>
+		<p>RYM <a href="https://rateyourmusic.com/list/doqmeat/2022-log" target="_blank" class="outlink">log</a></p>
 		<h3>all listening logs</h3>
 		<details>
 			<summary>if you're looking for a specific album or artist just hit that CTRL + F and search away :D <small>(updated every time i create a new page!)</small></summary>
