--- a/doqmeat/journal/archive.html
+++ b/doqmeat/journal/archive.html
@@ -24,6 +24,7 @@ coded with love by des
   <header class="hide">
    <small><a href="../index.html" target="_parent">out of frame? click here!</a></small>
   </header>
+  <li>23.jan.25 - <a href="2025/01.html#23">2nd year of uni</a></li>
   <li>20.jan.25 - <a href="2025/01.html#20">winter break wrap-up</a></li>
   <li>01.jan.25 - <a href="2025/01.html#1">i am tired, but also a bit joyful</a></li>
   <li>17.dec.24 - <a href="2024/12.html#17">1st year of uni done!</a></li>
