NOW IT SHOULD WORK

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -82,7 +82,7 @@
 
   <div id="recc" class="box">
    <h3>recommend me music!</h3>
-   <form action="https://formsubmit.co/music@doqmeat.com" method="POST" />
+   <form action="https://formspree.io/f/mrbebanw" method="POST" />
    <textarea id="message" name="message" placeholder="write your message here! could be an album or songs." style="height:100px"></textarea>
    <input id="submit" type="submit" value="Submit">
    </form>
