added some info buttons

--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -228,6 +228,8 @@
 
 		<h2 id="3" class="title">buttons</h2>
 		<div id="buttons" class="container">
+			<img src="!g/notforchildren.jpg">
+			<img src="!g/transrights.png">
 			<a href="https://rainy.gay/other/buttons"><img src="!g/antinft.png"></a>
 			<a href="https://www.tumblr.com/zeusofthecrows/695373316113973248/site-info-data?source=share" target="_blank"><img src="!g/best%20viewed.jpg"></a>
 			<a href="https://zanarkand.neocities.org/withlove" target="_blank"><img src="!g/dumbass.gif"></a>
