added some more buttons to footer

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -326,6 +326,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><a href="/notebook/links/credit.html#home">credit</a> for materials used / homepage running on v4</p>
 			<p>coded with love by <b>des</b> / on the web since <b>11.apr.23</b> / hosted on <a href="https://neocities.org" target="_blank">neocities</a> / <a title="email me!" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a></p>
 			<a title="link to rosemary's free palestine page full of great resources on how to know and help the people of palestine" href="https://hillhouse.neocities.org/journal/notes/palestine" target="_blank"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
+			<img src="/collection/internet-graphics/!g/notforchildren.jpg" alt="not intended for children">
+			<img src="collection/internet-graphics/!g/transrights.png" alt="trans rights now!">
 			<img src="/collection/internet-graphics/!g/best%20viewed.jpg" alt="best viewed 1920 x 1080 resolution">
 			<img src="/collection/internet-graphics/!g/nop.gif" alt="no nazi, no fascism, no racism">
 			<img src="/collection/internet-graphics/!g/dontfeedai.gif" alt="don't feed the AI!">
